--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nucleun-validator",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Generic Validator",
   "main": "index.js",
   "keywords": [
@@ -14,6 +14,9 @@
   },
   "author": "João Pinto Neto <joaopintoneto@gmail.com>",
   "license": "MIT",
+  "dependencies": {
+    "nucleun-module": "0.0.1"
+  },
   "devDependencies": {
     "babel-core": "6.17.0",
     "babel-eslint": "7.0.0",
